--- a/momentum/style.css
+++ b/momentum/style.css
@@ -1,10 +1,16 @@
 body {
-    background-color: beige;
+    text-align: center;
+    font-family: 'Aclonica';
 }
 
+
 h1 {
-    color: cornflowerblue;
-    transition: color .5s ease-in-out;
+    font-size: 50px;
+    color: purple;
+    transition: color .5s ease-in-out;    
+    background: rgba(245, 245, 220, .7);
+    display: inline-block;
+    padding: 20px;
 }
 
 .clicked {
@@ -18,3 +24,56 @@ h1 {
 .hidden {
     display: none;
 }
+
+/*css codes below are for better design of the website*/
+img {
+    position:absolute;
+    width:100%;
+    height:100%;
+    left: 0px;
+    top: 0px;
+    right:0px;
+    bottom:0px;
+    z-index: -1;
+    opacity:70%;
+}
+
+#quote {
+    margin-top: 50px;
+    font-size: 30px;
+    display: grid;
+    color: rgb(9, 6, 47);
+    font-weight: 300;
+    place-items: center;
+    text-shadow: 2px 2px 2px rgb(189, 187, 187);
+    z-index: 2;
+    text-align: center;
+    background: rgba(245, 245, 220, .7);
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+#clock {
+    text-align: center;
+    font-size: 40px;
+    background: rgba(245, 245, 220, .7);
+    display: inline-block;
+    padding: 20px;
+}
+
+#weather {
+    font-size: 20px;
+    background: rgba(245, 245, 220, .7);
+    display: inline-block;
+}
+
+#todo-list {
+    font-size: 20px;
+    background: rgba(245, 245, 220, .7);
+}
+
+ul {
+    text-align: center;
+    display: inline-block;
+}
+
